# Nvidia_Stereo_Matching_Competition

./: README.md
Datasets_Scripts/Create_Training_Dataset/: CMakeLists.txt  terminal_commands.txt
Datasets_Scripts/Create_Training_Dataset/inc/: sample_common.h  sgm.h  sgm_wrapper.h  utility.h
Datasets_Scripts/Create_Training_Dataset/src/: census_transform.cu  check_consistency.cu  cost_aggregation.cu  main.cpp  median_filter.cu  sgm.cpp  utility.cpp
Datasets_Scripts/PFM_to_Depth_Map/: commands.txt  pfm2depth.py
Datasets_Scripts/Script_Dataset/: command.txt  data_script.py
Principe_Sambin_NvidiaSM/SGMCuda/: CMakeLists.txt
Principe_Sambin_NvidiaSM/SGMCuda/Bash_Scripts/: sgm_nano
Principe_Sambin_NvidiaSM/SGMCuda/inc/: device_image.h  device_utility.h  host_utility.h  types.h
Principe_Sambin_NvidiaSM/SGMCuda/src/: device_image.cpp  main.cpp  sample_common.cpp  sgm_wrapper.cpp  utility.cpp  winner_takes_all.cu
Principe_Sambin_NvidiaSM/SGM_EMB_2016/: CMakeLists.txt  main.cu
Principe_Sambin_NvidiaSM/SGM_EMB_2016/Bash_Scripts/: sgm
Principe_Sambin_NvidiaSM/SGM_EMB_2016/inc/: util.h
Principe_Sambin_NvidiaSM/SGM_EMB_2016/src/: main.cu  utility.cpp
Principe_Sambin_NvidiaSM/Stereo_Vae/: CMakeLists.txt  StereoVae.ipynb
Principe_Sambin_NvidiaSM/Stereo_Vae/Bash_Scripts/: stereo_vae_best.pt  stereovae.sh  stereovae_fold_v17.onnx  stereovae_v17.engine
Principe_Sambin_NvidiaSM/Stereo_Vae/inc/: constants.h  device_allocator.h  dl_utility.h  internal.h  sgm.h
Principe_Sambin_NvidiaSM/Stereo_Vae/src/: correct_disparity_range.cu  cuda_utils.cu  device_allocator.cpp  dl_utility.cu  main.cpp  utility.cpp
Principe_Sambin_NvidiaSM/VPI_SGM/: CMakeLists.txt  main.cpp
Principe_Sambin_NvidiaSM/VPI_SGM/Bash_Scripts/: sgm.sh  vpi_sample_02_stereo_disparity
